	- ResetLayout() method fixed and renamed to ResetWidgetLayout(). 
	- the tabs and tabbed window title showed incorrect info(title, icon) in  "nested tabbing" mode
	  and in "tabbed autohide" mede. this bug is fixed for both mode by adding 
	  RefreshTabWindowLabel() method to TabWindow class.
	- other internal and minor bugfixes.
	* removed irrelevant packages from the assembly :) (remnants of my early experiments...)
	* DockCtrlExample is added to the package. now the main package is named DockCtrl Dev802b.2
	* default and enhanced background skins are polished. now they have more native look.

2/20/2008
	+ german translation added (Thanks to Masu).
	- fixed "call by reference errors" under MingW 3.4.2 (Thanks to Masu)
	- Tab text alignment, close button detection bugs and scrollbar separator line painting are fixed (Thank to Unodgs).
	- fixed autohide bug which caused the framework fall into an infinite loop when trying to hide a 2+ level nested tabs.

2/21/2008
	* from now on, default U++ chameleon skins are used for painting the dragbar background (in default and enhanced style)
	  namely, from now on system colors applies to the Dockctrl dragbar. used skin samples are as following: 
	  default 	skin = drawed using default TabCtrl style.
	  enhanced 	skin = drawed using default ToolBar style.
	  classic	skin = no special draw action (uses current system background).   
	+ tab repositioning for TabWindow and Autohide (using Ctrl + Left drag or with solely Middle Drag) added;  

2/23/2008
	+ added partial X11 support (only drag-n-drop at the moment) - thanks to Mrjtuk.
	* from now on, tab drag-n-drop animation  has transparency effect.
	- fixed a bug in tab animation which causes to set the active tab to the last tab in the list. now the tabs
	  correctly set the cursour to the previously active tab if the dnd is cancelled.
	- fixed a bug in tab animation transparency effect which causes pane's with more than 2 childs to draw the animation
	  incorrectly.  